--- a/test.html
+++ b/test.html
@@ -5,8 +5,8 @@
 		<script src="3difier.js"></script>
 	</head>
 	<body>
-		<div class="container showgrid">
-			<div id="canvas_holder"></div>
+		<div class="container">
+			<div class="span-24" id="canvas_holder"></div>
 			<h2 id="status">0, 0</h2>
 			<form id="form" class="inline">
 				<fieldset>
