--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 	<body>
 		<div class="container">
 			<div class="span-24" id="canvas_holder"></div>
-			<h2 id="status">0, 0</h2>
+			<div id="status">0, 0</div>
 			<form id="form" class="inline">
 				<fieldset>
 					<legend>Add Objects</legend>
@@ -18,6 +18,7 @@
 					<input type="button" value="3Dify" id="3dify"/>
 					<input type="button" value="fill" id="fill" />
 					<input type="button" value="debug" id="debug" />
+					<input type="button" value="no debug" id="no_debug" />
 				</fieldset>
 			</form>
 		</div>
