--- a/test.html
+++ b/test.html
@@ -7,8 +7,8 @@
 	<body>
 		<div class="container">
 			<div class="span-24" id="canvas_holder"></div>
-			<div id="status">0, 0</div>
-			<form id="form" class="inline">
+			<div id="status" class="span-20 append-3 prepend-1 last">0, 0</div>
+			<form id="form" class="span-20 append-3 prepend-1 last inline">
 				<fieldset>
 					<legend>Add Objects</legend>
 					Objects will be sorted by depth, the higher the depth the further "into" the image the object is.  Height and width are optional, if unset the picture's original dimensions will be used.
@@ -16,9 +16,8 @@
 					<div id="display_objects_form"></div>
 					<input type="button" id="more" value="More" />
 					<input type="button" value="3Dify" id="3dify"/>
-					<input type="button" value="fill" id="fill" />
 					<input type="button" value="debug" id="debug" />
-					<input type="button" value="no debug" id="no_debug" />
+					<input type="button" value="no debug" id="no_debug" /><br />
 				</fieldset>
 			</form>
 		</div>
