moving from exposed to plugin

--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 		<link rel="stylesheet" href="css/screen.css" type="text/css" media="screen, projection" />
 		<script src="jquery-1.5.1.js"></script>
 		<script src="3difier.js"></script>
+		<script src="3dify.js"></script>
 	</head>
 	<body>
 		<div class="container">
@@ -20,6 +21,7 @@
 					<input type="button" value="no debug" id="no_debug" /><br />
 				</fieldset>
 			</form>
+			<div id='test'><div></div></div>
 		</div>
 	</body>
 </html>
