--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	</head>
 	<body>
 		<div class="container">
-			<div>
-				<div id='test' class="span-24"></div>
+			<div id='test' class="span-24"></div>
+			<div class="prepend-6 span-12 append-6">
+				This image was created dynamically.
 			</div>
 		</div>
 		<script type="text/javascript">
@@ -21,7 +22,6 @@
 				$('#test').threedeeify('add_object', 470,100,50,'https://github.com/images/modules/404/parallax_building_1.png');
 				$('#test').threedeeify('add_object', 700,100,65,'https://github.com/images/modules/404/parallax_building_2.png');
 				$('#test').threedeeify('start');
-				$('#test').threedeeify('debug');
 			});
 		</script>
 	</body>
