--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<div class="container">
 			<div id='test' class="span-24"></div>
 			<div class="prepend-6 span-12 append-6">
-				This image was created dynamically.
+				This image was created dynamically.  View source for example.
 			</div>
 		</div>
 		<script type="text/javascript">
