Canvas dimensions now set by JSON string.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					{"x": "470", "y": "100", "depth": "50", "url": "https://github.com/images/modules/404/parallax_building_1.png"},
 					{"x": "700", "y": "100", "depth": "65", "url": "https://github.com/images/modules/404/parallax_building_2.png"}
 				]};
-				$('#test').threedeeify('init',900,400).threedeeify('add_object', objects).threedeeify('start').threedeeify('debug');
+				$('#test').threedeeify('init',{"width": "900", "height": "400"}).threedeeify('add_object', objects).threedeeify('start').threedeeify('debug');
 			});
 		</script>
 	</body>
