Added functionality to invert x or y for each individual display_object or the entire scene.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 					{"x": "-5", "y": "-5", "depth": "80", "url": "https://github.com/images/modules/404/parallax_bg.jpg"},
 					{"x": "300", "y": "100", "depth": "20", "url": "https://github.com/images/modules/404/parallax_octocat.png"},
 					{"x": "310", "y": "310", "depth": "21", "url": "https://github.com/images/modules/404/parallax_octocatshadow.png"},
-					{"x": "370", "y": "150", "depth": "30", "url": "https://github.com/images/modules/404/parallax_speeder.png"},
-					{"x": "370", "y": "260", "depth": "31", "url": "https://github.com/images/modules/404/parallax_speedershadow.png"},
+					{"x": "370", "y": "150", "depth": "30", "url": "https://github.com/images/modules/404/parallax_speeder.png", "invert_y": "true"},
+					{"x": "370", "y": "260", "depth": "31", "url": "https://github.com/images/modules/404/parallax_speedershadow.png", "invert_y": "true"},
 					{"x": "470", "y": "100", "depth": "50", "url": "https://github.com/images/modules/404/parallax_building_1.png"},
 					{"x": "700", "y": "100", "depth": "65", "url": "https://github.com/images/modules/404/parallax_building_2.png"}
 				]};
